fix profile sizing on mobile

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ header {
     justify-content: space-between; 
     align-items: center;
     text-align: left;
+    overflow: hidden; 
 }
 
 .welcome-text,
